# ccx2paraview

./: .gitignore  FRDParser.py  PVDWriter.py  README.md  VTKWriter.py  VTUWriter.py  WriteLegacyLinearCells.py  WriteXMLLinearCells.py  ccx2paraview.py  ccx2paraview_20221006.py  ccx2paraview_20221012.py  clean.py  frd2vtk.py  frd2vtu.py  log.py  pyproject.toml  setup.py  test.py  tests.py
.github/workflows/: pythonpublish.yml
ccx2paraview/: FRDParser.py  PVDWriter.py  VTKWriter.py  VTUWriter.py  VTUWriter2.py  __init__.py  __main__.py  clean.py  cli.py  common.py  frd2vtk.py  log.py  main.py  parser.py  reader.py  release.py  utils.py  writer.py
ccx2paraview.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ci/: azure-pipeline.yml
dev/: FRDParser.py  FRDParser_original.py  INPParser.py  README.md  VTKWriter.py  VTUWriter.py  ccx2paraview.py  spooles.out  tests.py
dev/tests-elements/: C3D15.frd  C3D20.frd  CPE3.12d  CPE3.frd  CPE4.12d  CPE4.frd  CPE4.vtk  CPE4.vtu  CPS3.12d  CPS3.frd  CPS4.12d  CPS4.frd  S3.12d  S3.frd  S4.12d  S4.frd  S4.vtu  S6.12d  S6.frd  S6.vtu  S8.12d  S8.frd  S8.vtk
dev/tests-examples/: achtel2.frd  achtelc.vtu  achteld.frd  achteld.vtk  acou1.frd  acou3.frd  acou4.frd  anipla.vtk  aniso.frd  artery1.frd  artery4.frd  artery5.frd  artery5.vtk  artery5.vtu  ax6.frd  axial.frd  axial.vtk  axiplane.frd  axiplane.vtk  axrad.frd  axrad.vtu  b31.frd  b31.vtk  b31.vtu  b31nodthi.frd  ball.vtu  beam10p.vtu  beam8b.frd  beam8b.vtk  beam8f.frd  beam8p.vtu  beam_sens_freq_coord1.frd  beam_sens_freq_coord2.frd  beam_sens_stress_coord2.frd  beamb.frd  beamcontact.vtk  beamdy10.frd  beamdy10bm.frd  beamdy10bm.vtk  beamdy12.frd  (+557 more)
dev/tests-users/: ball.1.vtk  ball.1.vtu  ball.2.vtk  ball.2.vtu  ball.3.vtk  ball.3.vtu  ball.4.vtk  ball.4.vtu  ball.5.vtk  ball.5.vtu  ball.6.vtk  ball.6.vtu  ball.7.vtk  ball.7.vtu  ball.8.vtk  ball.8.vtu  john.unixccx.1.vtk  (+15 more)
src/: FRDParser.py  VTKWriter.py  VTUWriter.py  ccx2paraview.py
tests/: ccx2paraview_paraview.yaml  ccx2paraview_simulate_and_test.yaml  ccx2paraview_vtk.yaml  freecad.py  log.py  simulate_and_test.py  test.py  test_basicmodule.py
tests-elements/: C3D15.1.vtu  C3D15.frd  C3D15.inp  C3D15.vtk  C3D15.vtu  C3D20.1.vtu  C3D20.frd  C3D20.inp  C3D20.vtk  C3D20.vtu  CPE3.1.vtu  CPE3.frd  CPE3.inp  CPE3.vtk  CPE4.1.vtu  CPE4.frd  CPE4.vtk  CPS3.frd  CPS3.vtk  CPS3.vtu  CPS4.frd  S3.1.vtu  S3.frd  S3.inp  S3.vtk  S3.vtu  S4.1.vtu  S4.frd  S4.inp  S4.vtk  S4.vtu  S6.frd  S6.vtk  S6.vtu  S8.frd  S8.vtk  S8.vtu
tests-examples/: achtel2.frd  achtel2.inp  achtel2.vtk  achtel2.vtu  edgeload.frd  edgeload.vtk  edgeload.vtu  furnace.frd  furnace.vtk  furnace.vtu  oneel.1.vtu  oneel.frd  oneel.vtk  oneel.vtu  planestrain.frd  planestrain.vtk  planestrain.vtu  planestress3.1.vtu  planestress3.frd  planestress3.vtk  planestress3.vtu
(+5346 files in other folders)
